# api_restaurant_booking

./: .coverage  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test.db  Задание.txt  Структура_проекта.txt
app/: main.py
app/alembic/: env.py
app/alembic/versions/: initial_migration.py
app/api/v1/: api.py
app/api/v1/endpoints/: reservations.py  tables.py
app/core/: config.py  logging.py
app/db/: base.py  session.py
app/models/: base.py  enums.py  reservation.py  table.py
app/schemas/: reservation.py  table.py
app/services/: reservation.py  table.py
app/tests/: conftest.py  test_api.py  test_models.py
app/tests/api/: test_reservations.py  test_tables.py
